---
source: inline/tests/parser/mod.rs
info: "Test 'escaped-bold' from 'markup/bold.yml'"
---
Plain @ (1:1)->(1:17) (
    ␢␢**not bold**␢␢
    ^^^^^^^^^^^^^^^^
)

---
With input:

\*\*not bold\*\*


